# Dain

./: .gitignore  CMakeLists.txt  README.md  Type rules.txt  install.sh  kalidous-docs.html  main.cpp  nova-docs.html  proto.nova
.github/workflows/: release.yml
include/Nova/: core.h  nova.h
include/Nova/interface/: CLI.h
include/Nova/memory/: bumpAllocator.h
include/Nova/parse/: ast.h  tokenizer.h  tokens.h
include/Nova/utils/: debug.h  file_utils.h  i_o_utils.h  slice.h
internal/: TokenizerTurbo.h  core.h  file.h  helpers.h  keywords.h  parser.h  tokenizer.h  tokens.h  tokens_map.h
internal/dense_map/: unordered_dense_map.h
internal/interface/: CLI.h
internal/parse/: parser.h  tokenizer.h
src/: main.cpp
